fix: spacing

--- a/src/styles/blocks/article.css
+++ b/src/styles/blocks/article.css
@@ -6,6 +6,7 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  line-height: 1.6;
 }
 
 /**
