--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,6 +54,7 @@ a:focus {
  */
 :where(h1, h2, h3) {
   font-family: var(--sans-serif);
+  line-height: 1.25;
 }
 h1 {
   font-size: var(--token-size-2);
